--- a/bangService/Cargo.toml
+++ b/bangService/Cargo.toml
@@ -17,6 +17,8 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 futures-channel = "0.3.28"
 
+lazy_static = "1.4.0"
+
 [dependencies.uuid]
 version = "1.4.0"
 features = [
